Fix scroll issues on iOS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,7 @@ app-root {
   margin: auto;
   display: block;
   position: relative;
+  overflow-y: auto;
 }
 
 * {
